<resources>
    <string name="app_name">JustPlay-Student</string>
    <string name="token_error">登录凭证过期,请重新登录</string>
    <string name="please_wait">请稍等...</string>

    <string name="edit_input_email">请输入邮箱</string>
    <string name="edit_input_email_regis">请输入注册时填写的邮箱</string>
    <string name="edit_input_phone">请输入手机号码</string>
    <string name="edit_input_psd">请输入登录密码,不少于6位</string>
    <string name="edit_input_psd_again">请再输入一次密码</string>
    <string name="edit_input_psd_again2">请重复新密码</string>
    <string name="edit_input_phone_again">请输入手机号码</string>
    <string name="edit_input_code_again">请输入验证码</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="txt_bind_phone">绑定手机号</string>
    <string name="txt_bind_phone_tips">*如果您拥有中国手机号请进行绑定,方便更好的通过教师审核</string>
    <string name="txt_skip">跳过</string>
    <string name="txt_storage_time">保存时间</string>
    <string name="txt_next">下一步</string>

    <string name="txt_forgetpsd">忘记密码</string>
    <string name="txt_log">立 即 登 录</string>
    <string name="txt_goto_register">没有账号,去注册 ></string>
    <string name="try_to_play_msg">《try to play 用户注册协议》</string>
    <string name="txt_register">注  册</string>
    <string name="txt_submit">提  交</string>
    <string name="txt_submit_order">提交订单</string>
    <string name="txt_complete">完  成</string>
    <string name="txt_register_more">更多注册方式</string>
    <string name="txt_send_email">发送邮件</string>

    <string name="txt_var_email">通过邮箱方式</string>
    <string name="txt_var_phone">通过手机方式</string>

    <string name="radio_sex1">男</string>
    <string name="radio_sex2">女</string>

    <string name="edit_input_name">请输入你的名字</string>
    <string name="edit_select_timeage">请选择学习音乐的年限</string>
    <string name="edit_input_recommend_phone">请输入推荐人手机号</string>
    <string name="edit_input_whatever">(选填)</string>

    <string name="radio_text1">我的课程</string>
    <string name="radio_text2">订购课程</string>
    <string name="radio_text3">大师公开课</string>
    <string name="radio_text4">我要试课</string>
    <string name="radio_text5">个人中心</string>

    <string name="txt_nav1">推荐</string>
    <string name="txt_nav2">最新课程</string>
    <string name="txt_nav3">课程咨询</string>


    <string name="line_txt_course">演奏级</string>
    <string name="line_txt_teacher">老师介绍</string>
    <string name="line_txt_content">选择内容</string>
    <string name="line_txt_pay">支付方式</string>
    <string name="line_txt_pay_msg">支付信息</string>
    <string name="line_txt_hign">高级</string>
    <string name="line_txt_middle">中级</string>
    <string name="line_txt_selectedtime">选择上课时间</string>
    <string name="line_txt_selected_trytime">选择试课时间</string>
    <string name="line_txt_already_time">已选上课时间</string>
    <string name="line_txt_already_praticetime">已选陪练时间</string>
    <string name="line_txt_already_pratice_content">已选陪练内容</string>
    <string name="line_txt_recommend_public">推荐公开课</string>
    <string name="line_txt_public">公开课</string>
    <string name="txt_upload_music">上传乐谱</string>
    <string name="txt_upload_video">上传视频</string>
    <string name="line_txt_centi">证书</string>
    <string name="line_parent_msg">家长信息</string>
    <string name="line_parent_content">选择内容</string>

    <string name="txt_detail_label1">剩余可约课时</string>
    <string name="txt_detail_label2">关注他的学生</string>
    <string name="txt_detail_label3">累计小星星</string>
    <string name="txt_detail_label4">累计授课课时</string>

    <string name="txt_lesson_count">授课价格</string>
    <string name="txt_lesson_count_sel">请选择授课课时数量</string>
    <string name="txt_lesson_sale_sel">* 订购课时可享受 95 折优惠</string>
    <string name="txt_lesson_sale_middle">* 中级课程课时可用于预定中级及以下级别老师</string>

    <string name="txt_time_10">10课时</string>
    <string name="txt_time_20">20课时</string>
    <string name="txt_time_30">30课时</string>

    <string name="btn_settle">结算并提交预定信息</string>
    <string name="txt_delete">删除</string>
    <string name="txt_apply_lesson">提交试课申请</string>


    <string name="txt_consult_study">课程学习</string>
    <string name="txt_consult_serve">在线客服</string>
    <string name="txt_consult_other">其他</string>
    <string name="txt_updata">更新</string>
    <string name="txt_public_lesson_present">立即预约</string>
    <string name="txt_public_lesson_end">已结束</string>

    <string name="txt_public_dialog">参与此课程需要扣除一节课时</string>
    <string name="txt_comfirm_join">确认加入</string>
    <string name="txt_cancel_think">再想想</string>

    <string name="txt_pay_msg_num">订单编号: </string>
    <string name="txt_pay_msg_phone">订购人手机: </string>
    <string name="txt_pay_msg_way">支付方式: </string>
    <string name="txt_pay_msg_money">订单金额: </string>
    <string name="txt_pay_msg_count">订单数量: </string>
    <string name="txt_pay_immedia">立即付款</string>
    <string name="txt_pay_course">去订购课程</string>
    <string name="txt_pay_call">拨打客服电话</string>
    <string name="txt_pay_public">去大师公开课</string>
    <string name="txt_cancal_order">超过时间订单将自动取消</string>
    <string name="txt_cancal_order2">您可以用来预定大师公开课和预定老师课程时间</string>

    <string name="txt_edit_msg">编辑资料</string>

    <string name="txt_my_order">我的订单</string>
    <string name="txt_my_course">我的课程</string>
    <string name="txt_my_lesson">上课提醒</string>
    <string name="txt_my_book">课堂笔记本</string>
    <string name="txt_my_consult">课程咨询</string>
    <string name="txt_my_train">我的陪练</string>
    <string name="txt_my_ward">推荐有奖/奖励细则</string>
    <string name="txt_my_understand">了解我们 Try To Play</string>
    <string name="txt_my_phone_consult">咨询电话: 400-000-000</string>
    <string name="txt_my_phone_supervise">监督电话: 400-110-001</string>

    <string name="txt_enter">进入教室</string>

    <string name="txt_all">全 部</string>
    <string name="txt_wait_pay">待 付 款</string>

    <string name="txt_tab_middle">已上课</string>
    <string name="txt_tab_left">待上课</string>
    <string name="txt_tab_right">取消课程</string>

    <string name="txt_select_file">选择教学资料上传</string>
    <string name="txt_storage_file">保存资料到相册</string>

    <string name="txt_live_top">课程已完成 会看直播内容 巩固学习</string>

    <string name="txt_go_purchase">去购买</string>
    <string name="txt_go_purchase_tips">请先购买课程,才能使用该功能哦</string>
    <string name="txt_award_tips">每推荐一位朋友,满足奖励条件即可获赠10元课时</string>

    <string name="txt_person_nick">昵称: </string>
    <string name="txt_person_name">姓名: </string>
    <string name="txt_person_age">年龄: </string>
    <string name="txt_person_timelength">学琴时长: </string>
    <string name="txt_person_instrument">所学乐器: </string>
    <string name="txt_person_song">目前练习曲: </string>
    <string name="txt_person_sign">是否教室执照: </string>
    <string name="txt_person_pro">是否想走专业路线: </string>
    <string name="txt_person_twoyear">希望未来两年内达到什么水平: </string>

    <string name="txt_father">父亲信息</string>
    <string name="txt_parent_phone">请输入父亲或母亲的手机号码</string>
    <string name="txt_parent_idcard">请输入父亲或母亲的身份证号码</string>
    <string name="txt_parent_passport">请输入父亲或母亲的护照号码</string>
    <string name="txt_mother">母亲信息</string>
    <string name="txt_contact">联系方式</string>
    <string name="txt_idcard">身份证</string>
    <string name="txt_passport">护照号</string>

    <string name="txt_selected">选择他</string>
    <string name="txt_attention">关注他</string>

    <string name="time_remain">剩余可约课时</string>
    <string name="time_total">累计授课课时</string>
    <string name="time_atteantion_stu">关注他的学生</string>

    <string name="time_selected">可选课时</string>
    <string name="time_selected_time">选择上课时间</string>
    <string name="time_selected_time_3month">* 只显示3个月的可选课时</string>

    <string name="pratice_count">陪练价格: </string>
    <string name="pratice_teach_count">请选择授课课时数量</string>
    <string name="pratice_teach_count_tips">* 订购课时可享受95折优惠</string>
    
    <string name="pratice_fixed_price_80">80</string>
    <string name="pratice_fixed_price_100">100</string>
    <string name="pratice_fixed_price_30">/ 30分钟 X</string>
    <string name="pratice_fixed_price_40">/ 40分钟 X</string>
    <string name="pratice_fixed_price_complete_30">已经选择30分钟陪练</string>
    <string name="pratice_fixed_price_complete_40">已经选择30分钟陪练</string>
</resources>
