<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/frag_person_msg">

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_label="@string/txt_person_nick" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_label="@string/txt_person_name" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:img_arrow="arrow_down"
        app:main_label="@string/txt_person_timelength" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_label="@string/txt_person_instrument" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_label="@string/txt_person_song" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switch_gone="true"
        app:main_label="@string/txt_person_sign" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switch_gone="true"
        app:main_label="@string/txt_person_pro" />

    <com.ostak.justplaystudent.ui.view.CustomPersonView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:img_arrow="arrow_hide"
        app:main_label="@string/txt_person_twoyear" />

</merge>
