<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_search_top_enter" />

    <com.ostak.justplaystudent.ui.view.CustomTabView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:log_tab_bg="content_bg"
        app:log_txt_left="@string/txt_tab_left"
        app:log_txt_middle="@string/txt_tab_middle"
        app:log_txt_right="@string/txt_tab_right" />

    <include
        style="@style/main_padding_margin"
        layout="@layout/include_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
