<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_search_top" />

    <LinearLayout
        style="@style/main_padding_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_head_comfrim" />

        <com.ostak.justplaystudent.ui.view.CustomLineVie
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_txt="@string/line_txt_content"></com.ostak.justplaystudent.ui.view.CustomLineVie>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_label"
                style="@style/text_nor_style_nopadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_lesson_count_sel"
                android:textColor="@color/text_nor_gray" />

            <TextView
                style="@style/text_nor_style_nopadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_nor_15"
                android:layout_toRightOf="@id/txt_label"
                android:text="@string/txt_lesson_sale_sel"
                android:textColor="@color/color_main_red" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="@dimen/img_max_width"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_checkbox_lesson"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/txt_time_10"
                android:textColor="@color/text_nor_gray"
                android:textSize="@dimen/dimen_size_35sp" />

            <CheckBox
                android:layout_width="@dimen/img_max_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_nor"
                android:background="@drawable/bg_checkbox_lesson"
                android:button="@null"
                android:gravity="center"
                android:text="@string/txt_time_20"
                android:textColor="@color/text_nor_gray"
                android:textSize="@dimen/dimen_size_35sp" />

            <CheckBox
                android:layout_width="@dimen/img_max_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_nor"
                android:background="@drawable/bg_checkbox_lesson"
                android:button="@null"
                android:gravity="center"
                android:text="@string/txt_time_30"
                android:textColor="@color/text_nor_gray"
                android:textSize="@dimen/dimen_size_35sp" />
        </LinearLayout>

        <TextView
            style="@style/text_nor_style_nopadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor"
            android:text="@string/txt_lesson_sale_middle"
            android:textColor="@color/color_main_red" />

        <include layout="@layout/include_pay" />

        <Button
            style="@style/btn_log_min_multi_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_submit_order"
            android:textColor="@color/color_main" />
    </LinearLayout>


</LinearLayout>
