<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_stu"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/login_logo" />


        <com.ostak.justplaystudent.ui.view.CustomLogView
            android:id="@+id/edit_input_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor"
            app:editFocus="true"
            app:editHint="@string/edit_input_phone_again"
            app:inputType="text"
            app:input_mode="text"
            app:left_icon="@mipmap/icon_phone" />


        <com.ostak.justplaystudent.ui.view.CustomLogView
            android:id="@+id/edit_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor"
            app:editFocus="true"
            app:editHint="@string/edit_input_code_again"
            app:inputType="text"
            app:input_mode="text"
            app:left_icon="@mipmap/icon_code"
            app:right_txt="@string/txt_get_code"
            app:right_txt_color="@color/color_main" />

        <com.ostak.justplaystudent.ui.view.CustomLogView
            android:id="@+id/edit_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor"
            app:editFocus="true"
            app:editHint="@string/edit_input_psd"
            app:inputType="psd"
            app:input_mode="text"
            app:left_icon="@mipmap/icon_pwd" />


        <com.ostak.justplaystudent.ui.view.CustomLogView
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor"
            app:editFocus="true"
            app:editHint="@string/edit_input_email"
            app:inputType="psd"
            app:input_mode="text"
            app:left_icon="@mipmap/icon_email" />

        <CheckBox
            android:id="@+id/checkbox_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_nor_20dp"
            android:button="@drawable/bg_checkbox"
            android:checked="true"
            android:text="@string/try_to_play_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_nor_30dp"
            android:background="@mipmap/bg_btn2"
            android:gravity="center"
            android:minWidth="300dp"
            android:text="@string/txt_register"
            android:textColor="@color/color_main"
            android:textSize="@dimen/font_size_bigger" />

    </LinearLayout>
</ScrollView>
